@@ -2,6 +2,8 @@ Revision history for Socialtext-Utils
 
 0.17 - not yet released
   - improved/tweaked stu-most-wanted output to link to non-existent pages
+  - added stu-local-copy tool for moving content between a workspace and local
+    disk
 
 0.16 - Wed Aug  8 14:37:47 PDT 2007
   - fixed bug when PUTting pages with a '/' in the name
